ParamHelpers_1.2:
- rewrote generateDesign and dfRowsToList in C to greatly increase speed in 
  the case of dependent parameters
- paramValueToString produces better readable output
- getLower and getUpper have with.nr argument now

ParamHelpers_1.1-35:
- concept of dependent parameters was introduced (argument "requires")
- as.data.frame.OptPath: discretes.as.factor option
- all arguments "length" renamed to len
- new functions
-- convertParamSetToIrace  
-- dfRowToList, dfRowsToList
-- getOptPathDOB, getOptPathEOL
-- hasRequires
-- removeMissingValues	

ParamHelpers_1.0-55:
- disabled one unreasonable unit test for CRAN
- some dependencies are now imports like they should be

ParamHelpers_1.0-54: 
- First submit to CRAN.